// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header > デスクトップ表示のスナップショット 1`] = `
<div>
  <header
    class="fixed top-0 left-0 right-0 w-full z-50 bg-white shadow-sm"
  >
    <div
      class="container mx-auto px-4"
    >
      <div
        class="flex justify-between items-center h-16"
      >
        <div
          class="flex-shrink-0"
        >
          <a
            class="text-xl font-bold text-green-400"
            href="/"
          >
            Yomimono
          </a>
        </div>
        <nav
          class="hidden md:flex space-x-8"
        >
          <a
            class="inline-flex items-center px-1 pt-1 text-blue-600 border-b-2 border-blue-600"
            href="/"
          >
            未読一覧
          </a>
          <a
            class="inline-flex items-center px-1 pt-1 text-gray-600 hover:text-blue-500"
            href="/favorites"
          >
            お気に入り
          </a>
          <a
            class="inline-flex items-center px-1 pt-1 text-gray-600 hover:text-blue-500"
            href="/recent"
          >
            最近読んだ記事
          </a>
          <a
            class="inline-flex items-center px-1 pt-1 text-gray-600 hover:text-blue-500"
            href="/labels"
          >
            ラベル設定
          </a>
        </nav>
        <div
          class="md:hidden"
        >
          <button
            class="inline-flex items-center justify-center p-2 rounded-md text-gray-600 hover:text-gray-800 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
            type="button"
          >
            <span
              class="sr-only"
            >
              メニューを開く
            </span>
            <svg
              aria-hidden="true"
              class="block h-6 w-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 6h16M4 12h16M4 18h16"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header > ナビゲーションリンクの構造 > お気に入りページのアクティブ状態もスナップショットで担保する 1`] = `
<nav
  class="hidden md:flex space-x-8"
>
  <a
    class="inline-flex items-center px-1 pt-1 text-gray-600 hover:text-blue-500"
    href="/"
  >
    未読一覧
  </a>
  <a
    class="inline-flex items-center px-1 pt-1 text-blue-600 border-b-2 border-blue-600"
    href="/favorites"
  >
    お気に入り
  </a>
  <a
    class="inline-flex items-center px-1 pt-1 text-gray-600 hover:text-blue-500"
    href="/recent"
  >
    最近読んだ記事
  </a>
  <a
    class="inline-flex items-center px-1 pt-1 text-gray-600 hover:text-blue-500"
    href="/labels"
  >
    ラベル設定
  </a>
</nav>
`;

exports[`Header > ナビゲーションリンクの構造 > デフォルトの選択状態はスナップショットで担保する 1`] = `
<nav
  class="hidden md:flex space-x-8"
>
  <a
    class="inline-flex items-center px-1 pt-1 text-blue-600 border-b-2 border-blue-600"
    href="/"
  >
    未読一覧
  </a>
  <a
    class="inline-flex items-center px-1 pt-1 text-gray-600 hover:text-blue-500"
    href="/favorites"
  >
    お気に入り
  </a>
  <a
    class="inline-flex items-center px-1 pt-1 text-gray-600 hover:text-blue-500"
    href="/recent"
  >
    最近読んだ記事
  </a>
  <a
    class="inline-flex items-center px-1 pt-1 text-gray-600 hover:text-blue-500"
    href="/labels"
  >
    ラベル設定
  </a>
</nav>
`;

exports[`Header > モバイルメニュー展開時のスナップショット 1`] = `
<div>
  <header
    class="fixed top-0 left-0 right-0 w-full z-50 bg-white shadow-sm"
  >
    <div
      class="container mx-auto px-4"
    >
      <div
        class="flex justify-between items-center h-16"
      >
        <div
          class="flex-shrink-0"
        >
          <a
            class="text-xl font-bold text-green-400"
            href="/"
          >
            Yomimono
          </a>
        </div>
        <nav
          class="hidden md:flex space-x-8"
        >
          <a
            class="inline-flex items-center px-1 pt-1 text-blue-600 border-b-2 border-blue-600"
            href="/"
          >
            未読一覧
          </a>
          <a
            class="inline-flex items-center px-1 pt-1 text-gray-600 hover:text-blue-500"
            href="/favorites"
          >
            お気に入り
          </a>
          <a
            class="inline-flex items-center px-1 pt-1 text-gray-600 hover:text-blue-500"
            href="/recent"
          >
            最近読んだ記事
          </a>
          <a
            class="inline-flex items-center px-1 pt-1 text-gray-600 hover:text-blue-500"
            href="/labels"
          >
            ラベル設定
          </a>
        </nav>
        <div
          class="md:hidden"
        >
          <button
            class="inline-flex items-center justify-center p-2 rounded-md text-gray-600 hover:text-gray-800 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
            type="button"
          >
            <span
              class="sr-only"
            >
              メニューを開く
            </span>
            <svg
              aria-hidden="true"
              class="block h-6 w-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="md:hidden"
      >
        <div
          class="px-2 pt-2 pb-3 space-y-1"
        >
          <a
            class="block px-3 py-2 rounded-md text-base font-medium text-blue-600 bg-blue-50"
            href="/"
          >
            未読一覧
          </a>
          <a
            class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
            href="/favorites"
          >
            お気に入り
          </a>
          <a
            class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
            href="/recent"
          >
            最近読んだ記事
          </a>
          <a
            class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
            href="/labels"
          >
            ラベル設定
          </a>
        </div>
      </div>
    </div>
  </header>
</div>
`;
